<resources>
    <string name="app_name">SHAREit</string>
    <string name="about_name">About</string>
    <string name="about_content_web">Official Website</string>
    <string name="about_version_check">Check for New Version</string>
    <string name="about_user_agreement">Terms of Service</string>
    <string name="about_version_no_new">This is the latest version</string>
    <string name="about_open_url_failure">Failed</string>
    <string name="about_check_update_no_network">Unable to connect to Internet</string>
    <string name="about_google_help_us_localization">Help us with Localization</string>
    <string name="about_google_rate_googleplay">Rate us</string>
    <string name="about_google_mail_not_install">No Installed Email Client</string>
    <string name="about_grade_title">Love SHAREit?</string>
    <string name="about_grade_content">Your satisfaction is our biggest motivation! Rate us with 5 stars!</string>
    <string name="about_grade_btn_write_review">Feedback</string>
    <string name="about_grade_btn_likeit">Rate 5 Stars</string>
    <string name="about_content_contact">Contact us</string>
    <string name="about_contect_weibo">Weibo: 茄子快传</string>
    <string name="about_contect_bbs">BBS: Baidu Post Bar</string>
    <string name="about_contect_wechat">WeChat: qiezikc2012</string>
    <string name="about_contect_qq">QQ group: 251410749</string>
    <string name="about_copy_help">Copied to clipboard</string>
    <string name="personal_pager_score">积分</string>
    <string name="personal_pager_medal">勋章</string>
    <string name="personal_pager_login_btn">登录领取，积分换礼 >></string>
    <string name="account_personinfo_info_title">个人信息</string>
    <string name="account_personinfo_management">我的账号</string>
    <string name="account_personinfo_level_name">我的积分等级</string>
    <string name="account_personinfo_award_title">积分换礼</string>
    <string name="account_personinfo_award_goto_get_prize">去领奖 >></string>
    <string name="account_personinfo_medal">勋章成就</string>
    <string name="account_personinfo_view_all_medal_info">查看全部勋章</string>
    <string name="account_personinfo_login_name">账号：%s</string>
    <string name="account_personinfo_login_info">登录领取积分</string>
    <string name="account_level_value0">0</string>
    <string name="account_level_value1">5</string>
    <string name="account_level_value2">50</string>
    <string name="account_level_value3">300</string>
    <string name="account_level_value4">1k</string>
    <string name="account_level_value5">5k</string>
    <string name="account_level_value6">1.5w</string>
    <string name="account_level_value7">3.6w</string>
    <string name="account_level_value8">6w</string>
    <string name="account_level_value9">9w</string>
    <string name="account_level_value10">14w+</string>
    <string name="account_level_name0">幼稚园</string>
    <string name="account_level_name1">学前班</string>
    <string name="account_level_name2">小学生</string>
    <string name="account_level_name3">初中生</string>
    <string name="account_level_name4">高中生</string>
    <string name="account_level_name5">大学生</string>
    <string name="account_level_name6">硕士</string>
    <string name="account_level_name7">博士</string>
    <string name="account_level_name8">博士后</string>
    <string name="account_level_name9">教授</string>
    <string name="account_level_name10">院士</string>
    <string name="account_medal0">新茄丁</string>
    <string name="account_medal1">巨无霸</string>
    <string name="account_medal2">播种王</string>
    <string name="account_medal3">交际花</string>
    <string name="account_medal4">资源王</string>
    <string name="account_medal5">视频王</string>
    <string name="account_medal6">音乐王</string>
    <string name="account_medal7">应用王</string>
    <string name="account_medal8">照片王</string>
    <string name="account_medal9">百兆王</string>
    <string name="account_medal0_detail">恭喜您加入茄子家族</string>
    <string name="account_medal1_detail">传输文件总量超过2048M</string>
    <string name="account_medal2_detail">拓展新用户超过12个</string>
    <string name="account_medal3_detail">传输人数超过20个</string>
    <string name="account_medal4_detail">传输文件数超过1000个</string>
    <string name="account_medal5_detail">传输视频数超过100个</string>
    <string name="account_medal6_detail">传输音乐数超过600首</string>
    <string name="account_medal7_detail">传输应用数超过50个</string>
    <string name="account_medal8_detail">传输照片数超过600张</string>
    <string name="account_medal9_detail">单次传输文件超过100M</string>
    <string name="account_award_login_hint">登录，查看排名，赢取大奖哦！</string>
    <string name="account_award_remote_view_timeout">等待超時，连接失败</string>
    <string name="account_award_current_credit">当前积分</string>
    <string name="account_award_current_rank">当前排名</string>
    <string name="account_award_no_activity">"精彩活动筹划中
敬请期待"</string>
    <string name="account_award_earn_score_guide">赚取积分攻略>></string>
    <string name="account_scoreawardview_end_of_activity">离活动结束还有：</string>
    <string name="account_scoreawardview_activity_time">活动时间：</string>
    <string name="account_scoreawardview_open_time">开奖时间：</string>
    <string name="account_scoreawardview_award_day">天</string>
    <string name="account_scoreawardview_award_hour">时</string>
    <string name="account_scoreawardview_award_minute">分</string>
    <string name="account_scoreawardview_get_prize">领取奖品</string>
    <string name="account_scoreawardview_being_draw">活动评奖中…</string>
    <string name="account_scoreawardview_winner_list">查看获奖名单</string>
    <string name="account_scoreawardview_activity_not_start">活动即将开始</string>
    <string name="account_scoreawardview_activity_finished">活动已结束</string>
    <string name="account_scoreawardview_not_win">很遗憾，您没有中奖！</string>
    <string name="account_scoreawardview_you_win">恭喜您中奖了！</string>
    <string name="account_scoreawardview_award_received_prizes">您已领取奖品</string>
    <string name="account_scoreawardview_award_saved_info">已保存您的领奖信息，奖品马上发送。</string>
    <string name="account_score_rule_title">获取积分规则</string>
    <string name="account_score_rule_name11">启动茄子快传</string>
    <string name="account_score_rule_name4">二人快捷：分享一个文件给好友</string>
    <string name="account_score_rule_name10">二人快捷：传输100MB数据</string>
    <string name="account_score_rule_name13">茄子换机：分享一个文件给好友</string>
    <string name="account_score_rule_name16">连接电脑：分享一个文件给电脑</string>
    <string name="account_score_rule_name17">热传榜：播放视频/下载应用</string>
    <string name="account_score_rule_name1">邀请好友安装茄子快传——蓝牙、无线热点</string>
    <string name="account_score_rule_name21">参与传输体验改进计划</string>
    <string name="account_scorewinuser_award_title">领奖信息</string>
    <string name="account_scorewinuser_award_name">姓名:</string>
    <string name="account_scorewinuser_award_address">地址:</string>
    <string name="account_scorewinuser_award_telephone">电话:</string>
    <string name="account_scorewinuser_award_career">职业:</string>
    <string name="account_scorewinuser_award_age">年龄:</string>
    <string name="account_scorewinuser_award_education">教育程度:</string>
    <string name="account_scorewinuser_award_sex">性别:</string>
    <string name="account_scorewinuser_award_man">男</string>
    <string name="account_scorewinuser_award_female">女</string>
    <string name="account_scorewinuser_award_detail">"1.您的信息将会被严格保密，
2.请确保您的信息真实有效，以确保奖品有效发放。"</string>
    <string name="account_scorewinuser_award_top_text">红点处为必填</string>
    <string name="account_scorewinuser_award_activity_text">"恭喜您在 [%s] 活动中中奖！
请填写您的联系方式，获得活动奖品。"</string>
    <string name="account_scorewinuser_award_error_sex">请选择性别</string>
    <string name="account_scorewinuser_award_error_activityid">提交失败</string>
    <string name="account_scorewinuser_award_error_account_id">用户账户错误</string>
    <string name="account_scorewinuser_award_submit_success">提交成功，奖品会在近期发送给您！</string>
    <string name="account_rankscore_toplist_title">积分排行榜</string>
    <string name="account_rankscore_toplist_load_failed">加载列表失败</string>
    <string name="pc_known_ok">OK</string>
    <string name="pc_ppt_guide_msg1">Control PPT presentation with your smartphone remotely.</string>
    <string name="pc_ppt_guide_msg2" />
    <string name="pc_ppt_guide_msg3">\"PPT Control\"</string>
    <string name="pc_ppt_guide_msg4">So Simple!</string>
    <string name="pc_ppt_guide_msg5" />
    <string name="pc_playto_guide_msg1">Streaming photos from phone to PC wirelessly.</string>
    <string name="pc_playto_guide_msg2">Enjoy the larger screen with friends!</string>
    <string name="pc_playto_guide_msg3">\"Play To\"</string>
    <string name="pc_playto_guide_msg4">So Simple!</string>
    <string name="pc_playto_guide_msg5" />
    <string name="setting_hotlist_display_invisible">Rankings for test in discover</string>
    <string name="setting_support_preconnect">Enable Pre-Connect</string>
    <string name="setting_use_dev_server">Use Develop Server</string>
    <string name="setting_display_referer_info">Display Referer</string>
    <string name="setting_display_cloud_config">Cloud Config</string>
    <string name="setting_p2p_item1">Server</string>
    <string name="setting_p2p_item2">Broadcast</string>
    <string name="setting_p2p_item3">Multicast</string>
    <string name="setting_p2p_item4">Traverse</string>
    <string name="setting_scan_first">Enable Pre-Scan</string>
    <string name="setting_debug_logger">Debug Logger</string>
    <string name="setting_display_allcard">Display All Cards</string>
    <string name="setting_display_ccm_config">Manage Clound Config</string>
    <string name="setting_display_trans_summary">Show Trans-Summary</string>
    <string name="setting_trans_prefer_use_lan">Prefer Same Wi-Fi Mode</string>
    <string name="setting_trans_prefer_use_lan_info">ON means prefer current Wi-Fi network; OFF means create personal hotspot network for faster speed.</string>
    <string name="setting_connect">Confirm Before Connection</string>
    <string name="setting_connect_info">Let me confirm before others can join</string>
    <string name="setting_hide">Display Hidden Files</string>
    <string name="setting_hide_info" />
    <string name="setting_widi">Wi-Fi Direct</string>
    <string name="setting_widi_info">Enable Wi-Fi Direct transfer (Beta feature)</string>
    <string name="setting_invite_free">Sharing without internet</string>
    <string name="setting_invite_free_info">Easy to invite your friends to install SHAREit</string>
    <string name="setting_3g">Mobile Network Protect</string>
    <string name="setting_3g_info">Prevent other people from accessing your mobile hotspot when you share files</string>
    <string name="setting_flash_transfer">Transfer Speed Boost</string>
    <string name="setting_flash_transfer_info">Increase transfer speed even more by deep optimization technology</string>
    <string name="setting_user_transfer_report">Transfer Experience Improvement Program</string>
    <string name="setting_user_transfer_report_info">Help us to deliver better products and services</string>
    <string name="setting_storage">Storage Location</string>
    <string name="setting_delete_apk">Delete APK After Installation</string>
    <string name="setting_delete_apk_info">Delete apk file after the app is installed</string>
    <string name="setting_auto_update">Update</string>
    <string name="setting_auto_update_info">Get the latest features first</string>
    <string name="setting_tab_common">General</string>
    <string name="setting_tab_advanced">Advanced</string>
    <string name="setting_clean_caches">Clean Caches</string>
    <string name="setting_confirm_download">Acquire News Feed Only Under Wi-Fi</string>
    <string name="setting_confirm_download_info">"Under 2/3/4G connection, you won't get any news."</string>
    <string name="setting_set_ap_password">Hotspot Encryption</string>
    <string name="setting_set_ap_password_info">Encrypted hotspot for safe transferring.(Note:require Sender upgrade to latest version)</string>
    <string name="setting_language_change">Language</string>
</resources>