<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:orientation="vertical" android:background="#ff302f2e" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="bottom" android:layout_gravity="center" android:orientation="vertical" android:paddingBottom="@dimen/pc_ppt_control_guide_mask1_layout_padding_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center_horizontal" android:layout_width="@dimen/pc_ppt_control_guide_mask1_pic_width" android:layout_height="@dimen/pc_ppt_control_guide_mask1_pic_height" android:layout_marginBottom="@dimen/pc_ppt_control_guide_mask1_pic_margin_bottom" android:src="@drawable/ppt_guide_pic" />
        <TextView android:textSize="@dimen/common_title_text_size" android:textColor="#ffffffff" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pc_ppt_guide_msg1" />
        <TextView android:textSize="@dimen/common_title_text_size" android:textColor="#ffffffff" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pc_ppt_guide_msg2" />
        <TextView android:textSize="@dimen/common_title_text_size_large" android:textColor="#ffffffff" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pc_ppt_guide_msg3" />
        <TextView android:textSize="@dimen/common_title_text_size" android:textColor="#ffffffff" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pc_ppt_guide_msg4" />
        <TextView android:textSize="@dimen/common_title_text_size" android:textColor="#ffffffff" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pc_ppt_guide_msg5" />
    </LinearLayout>
</FrameLayout>