<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="#ff302f2e" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/playto_guide_exit" android:paddingBottom="@dimen/pc_playto_guide_mask_padding_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <Button android:textSize="@dimen/common_title_text_size_large" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="center" android:id="@id/exit_guide_button" android:background="@drawable/common_capsule_button_filled_gray" android:layout_width="wrap_content" android:layout_height="@dimen/pc_playto_guide_mask_exit_button_height" android:minWidth="@dimen/pc_playto_guide_mask_exit_button_min_width" android:text="@string/pc_known_ok" />
    </FrameLayout>
    <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/playto_guide_exit">
        <LinearLayout android:gravity="bottom" android:layout_gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="center_horizontal" android:layout_width="@dimen/pc_playto_guide_content_image_width" android:layout_height="@dimen/pc_playto_guide_content_image_height" android:layout_marginTop="@dimen/pc_playto_guide_content_image_margin_vertical" android:layout_marginBottom="@dimen/pc_playto_guide_content_image_margin_vertical" android:src="@drawable/pc_playto_guide_pic" />
            <TextView android:textSize="@dimen/common_title_text_size" android:textColor="#ffffffff" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pc_playto_guide_msg1" />
            <TextView android:textSize="@dimen/common_title_text_size" android:textColor="#ffffffff" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pc_playto_guide_msg2" />
            <TextView android:textSize="@dimen/common_title_text_size_large" android:textColor="#ffffffff" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pc_playto_guide_msg3" />
            <TextView android:textSize="@dimen/common_title_text_size" android:textColor="#ffffffff" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pc_playto_guide_msg4" />
            <TextView android:textSize="@dimen/common_title_text_size" android:textColor="#ffffffff" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pc_playto_guide_msg5" />
        </LinearLayout>
    </FrameLayout>
</RelativeLayout>